no autorestart for rados-create-user

--- a/etc/supervisord.d/rados-add-user.ini
+++ b/etc/supervisord.d/rados-add-user.ini
@@ -1,6 +1,8 @@
 [program:rados-add-user]
-command=/opt/qnib/ceph/bin/create_rados_user.py
-startsecs=0
+command=/opt/qnib/ceph/bin/create_rados_user.py --username "Test Qnib" qnib
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
-autorestart = true
+autorestart = false
+startsecs=0
+exitcodes=0
+startretries=3
